# allocator

./: .travis.yml  CMakeLists.txt  README.md  allocator.h  main.cpp  slist.h
test/: CMakeLists.txt  allocator_test.cpp  slist_test.cpp  testallocatoraccessor.h
